fits in one page

--- a/.html source code for human readable resumes/voice-talent.html
+++ b/.html source code for human readable resumes/voice-talent.html
@@ -40,17 +40,17 @@
         }
 
         h1 {
-            font-size: 26pt;
+            font-size: 24pt;
             font-weight: 700;
             color: #2c3e50;
-            margin-bottom: 6px;
+            margin-bottom: 5px;
         }
 
         .contact-info {
             display: flex;
             flex-wrap: wrap;
-            gap: 8px 16px;
-            font-size: 9pt;
+            gap: 6px 12px;
+            font-size: 8.5pt;
             color: #555;
         }
 
@@ -65,64 +65,64 @@
         }
 
         section {
-            margin-bottom: 16px;
+            margin-bottom: 13px;
         }
 
         h2 {
-            font-size: 13pt;
+            font-size: 12pt;
             font-weight: 700;
             color: #2c3e50;
             text-transform: uppercase;
             letter-spacing: 0.5px;
             border-bottom: 1.5px solid #bdc3c7;
-            padding-bottom: 3px;
-            margin-bottom: 10px;
+            padding-bottom: 2px;
+            margin-bottom: 8px;
         }
 
         .summary {
-            font-size: 9.5pt;
-            line-height: 1.5;
+            font-size: 9pt;
+            line-height: 1.4;
             text-align: justify;
             color: #444;
         }
 
         .job, .education-entry {
-            margin-bottom: 12px;
+            margin-bottom: 10px;
         }
 
         .job-header, .education-header {
             display: flex;
             justify-content: space-between;
-            margin-bottom: 4px;
+            margin-bottom: 3px;
         }
 
         .job-title {
             font-weight: 600;
-            font-size: 10.5pt;
+            font-size: 10pt;
             color: #2c3e50;
         }
 
         .company {
             font-weight: 600;
-            font-size: 10pt;
+            font-size: 9.5pt;
             color: #555;
         }
 
         .location-date {
-            font-size: 9pt;
+            font-size: 8.5pt;
             color: #666;
             font-style: italic;
         }
 
         ul {
             margin-left: 18px;
-            margin-top: 4px;
+            margin-top: 3px;
         }
 
         li {
-            margin-bottom: 3px;
-            font-size: 9.5pt;
-            line-height: 1.4;
+            margin-bottom: 2px;
+            font-size: 9pt;
+            line-height: 1.35;
         }
 
         .skills {
@@ -138,13 +138,13 @@
 
         .degree {
             font-weight: 600;
-            font-size: 10.5pt;
+            font-size: 10pt;
             color: #2c3e50;
         }
 
         .institution {
             font-weight: 600;
-            font-size: 10pt;
+            font-size: 9.5pt;
             color: #555;
         }
 
@@ -155,7 +155,7 @@
             }
             .container {
                 margin: 0;
-                padding: 0.5in 0.6in;
+                padding: 0.45in 0.55in;
                 width: 100%;
             }
         }
@@ -267,12 +267,12 @@
 
         <section>
             <h2>Skills & Expertise</h2>
-            <div class="skills">
-                <span><span class="skill-category">Languages:</span> Native Japanese, Fluent English (bilingual)</span> •
-                <span><span class="skill-category">Linguistics:</span> Phonetics, prosody, dialectal analysis, kuzushi-ji transcription</span> •
-                <span><span class="skill-category">Voice:</span> Vocal versatility, tone adaptation, emotional range, pronunciation accuracy</span> •
-                <span><span class="skill-category">Technical:</span> NLP, Python, translation/localization, technical writing</span>
-            </div>
+            <ul style="margin-left: 0; list-style: none;">
+                <li><span class="skill-category">Languages:</span> Native Japanese, Fluent English (bilingual)</li>
+                <li><span class="skill-category">Linguistics:</span> Phonetics, prosody, dialectal analysis, kuzushi-ji transcription</li>
+                <li><span class="skill-category">Voice:</span> Vocal versatility, tone adaptation, emotional range, pronunciation accuracy</li>
+                <li><span class="skill-category">Technical:</span> NLP, Python, translation/localization, technical writing</li>
+            </ul>
         </section>
     </div>
 </body>
