remove blank link place holders

--- a/.html source code for human readable resumes/no-link-resume.html
+++ b/.html source code for human readable resumes/no-link-resume.html
@@ -199,7 +199,7 @@
     <div class="header">
         <h1>KENTARO VADNEY</h1>
         <div class="contact-info">
-            Santa Clara, CA 95050 | (424) 533-9384 | kentarovadney@gmail.com | LinkedIn: [ADD URL] | GitHub: [ADD URL]
+            Santa Clara, CA 95050 | (424) 533-9384 | kentarovadney@gmail.com 
         </div>
     </div>
     
