change fellow/liaison to product analyst to better communicate what I did

--- a/.html source code for human readable resumes/link-heavy-resume.html
+++ b/.html source code for human readable resumes/link-heavy-resume.html
@@ -342,7 +342,7 @@
         
         <div class="job">
             <div class="job-header">
-                <div><span class="job-title">Fellow/Liaison</span> @ <span class="company">Berkeley Blockchain Accelerator</span></div>
+                <div><span class="job-title">Product Analyst</span> @ <span class="company">Berkeley Blockchain Accelerator</span></div>
                 <div class="dates">Jan 2021 – Apr 2022</div>
             </div>
             <ul class="job-description">
