switch santa clara address to alameda

--- a/.html source code for human readable resumes/black-simple-linguist-resume.html
+++ b/.html source code for human readable resumes/black-simple-linguist-resume.html
@@ -126,7 +126,7 @@
     <div class="header">
         <h1>KENTARO VADNEY</h1>
         <div class="contact-info">
-            Santa Clara, CA 95050 | (424) 533-9384 | kentarovadney@gmail.com<br>
+            Alameda, CA, 94502 | (424) 533-9384 | kentarovadney@gmail.com<br>
             <a href="https://www.linkedin.com/in/kentarov/">LinkedIn: linkedin.com/in/kentarov</a> | 
             <a href="https://github.com/VadneyK">GitHub: github.com/VadneyK</a>
         </div>
