--- a/.html source code for human readable resumes/simple-linguist-resume.html
+++ b/.html source code for human readable resumes/simple-linguist-resume.html
@@ -189,7 +189,7 @@
     <div class="header">
         <h1>KENTARO VADNEY</h1>
         <div class="contact-info">
-            Santa Clara, CA 95050 | (424) 533-9384 | kentarovadney@gmail.com | 
+            Alameda, CA, 94502 | (424) 533-9384 | kentarovadney@gmail.com | 
             <a href="https://www.linkedin.com/in/kentarov/" target="_blank">LinkedIn</a> | 
             <a href="https://github.com/VadneyK" target="_blank">GitHub</a>
         </div>
